# How-Transformer-LLMs-Work

./: .gitignore  README.md  Readme.md  pyproject.toml  requirements.txt  start.sh
Comparing Trained LLM Tokenizers/: tokenizers.ipynb
Transformer Architecture/: Architecture.ipynb  BEHIND THE SCENES How Language Models Generate Text.ipynb  HOW LANGUAGE MODELS MAKE PREDICTIONS.ipynb  LLM Token By Token Generation Explained.ipynb
encoder–decoder transformer in PyTorch/: config.py  dummy_loader.py  inference.py  positional_encoding.py  train.py
encoder–decoder transformer in PyTorch/data/: en_hi_tiny.json
encoder–decoder transformer in PyTorch/data/model/: dummy_loader2.py  train2.py  transformer_mt.py
self-attention/: Code working.txt  Interview.txt  self_attention_demo.py
tokenizer/: Readme.md  Tokenizer.md  Transformer Model Architecture.txt  Transformer Model.txt  download_model.py
tokenizer/app/: api.py  main_app.py
tokenizer/core/: config.py  dataset.py  loader.py  mt_translate_core.py
tokenizer/data/tokenizers/: en_spm.model  en_spm.vocab  hi_spm.model  hi_spm.vocab
tokenizer/data/trained_models/: en_hi_latest.pt
tokenizer/model architecture/: o.txt  ok.txt
tokenizer/models/: positional_encoding.py  transformer_mt.py
tokenizer/scripts/: translate.py
tokenizer/train/: make_corpora.py  train_real.py  train_spm.py
