[tool.poetry]
name = "how_transformer_llms_work"
version = "0.1.0"
description = ""
authors = ["Somesh Diwan"]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
torch = "*"
streamlit = "*"
sentencepiece = "*"
fastapi = "*"
uvicorn = "*"
numpy = "*"

[tool.poetry.packages]
packages = [
    { include = "tokenizer" }
]