[tool.poetry]
name = "how-transformer-llms-work"
version = "0.1.0"
description = "EN-HI Transformer + Streamlit app"
authors = ["Somesh Diwan"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
streamlit = "^1.51.0"
torch = "^2.1.0"
sentencepiece = "^0.2.0"
pandas = "^2.0.0"
matplotlib = "^3.8.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
